<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".ui.homescreen.lookup.SearchHistoryFragment">

    <data>
        <import type="com.tegaoteam.application.tegao.ui.shared.GlobalState.LookupMode"/>
        <variable
            name="viewModel"
            type="com.tegaoteam.application.tegao.ui.homescreen.lookup.SearchHistoryFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Theme.Tegao.Screen.PaddingBorder">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lo_searchBar_cst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_thick_stroke_background"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{() -> viewModel.evNavigateToLookupActivity.ignite()}">

            <TextView
                android:id="@+id/dl_searchKeywordInput_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/padding_large"
                android:paddingStart="@dimen/padding_large"
                android:text="@string/hint_enter_search_keyword_here"
                android:textColor="@color/neutral"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lo_searchType_cst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            app:layout_constraintTop_toBottomOf="@id/lo_searchBar_cst">

            <FrameLayout
                android:id="@+id/lo_stringHistory_fl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding_tiny"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/lo_kanjiHistory_fl"
                app:layout_constraintTop_toTopOf="parent"
                >

                <Button
                    android:id="@+id/stringHistory_btn"
                    style="@style/Theme.Tegao.LabelButton.Neutral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_words"
                    app:icon="@drawable/ftc_bold_char_a_128"
                    app:toggleVisibility="@{viewModel.lookupMode != LookupMode.WORD}"
                    android:onClick="@{() -> viewModel.evChangeToWordMode.ignite()}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:foreground="?android:attr/selectableItemBackground"
                    tools:visibility="gone"/>

                <Button
                    android:id="@+id/lo_stringHistory_active_btn"
                    style="@style/Theme.Tegao.LabelButton.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_words"
                    app:icon="@drawable/ftc_bold_char_a_128"
                    app:toggleVisibility="@{viewModel.lookupMode == LookupMode.WORD}"
                    android:clickable="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/lo_kanjiHistory_fl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_tiny"
                app:layout_constraintStart_toEndOf="@id/lo_stringHistory_fl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <Button
                    android:id="@+id/kanjiHistory_btn"
                    style="@style/Theme.Tegao.LabelButton.Neutral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_kanji"
                    app:icon="@drawable/ftc_bold_jp_char_go_128"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:toggleVisibility="@{viewModel.lookupMode != LookupMode.KANJI}"
                    android:onClick="@{() -> viewModel.evChangeToKanjiMode.ignite()}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/lo_kanjiHistory_active_btn"
                    style="@style/Theme.Tegao.LabelButton.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_kanji"
                    app:icon="@drawable/ftc_bold_jp_char_go_128"
                    app:toggleVisibility="@{viewModel.lookupMode == LookupMode.KANJI}"
                    android:clickable="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="gone"/>

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/lo_title_history_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_normal"
            android:drawablePadding="@dimen/padding_small"
            android:text="@string/title_search_history_empty"
            android:textAlignment="center"
            app:drawableStartCompat="@drawable/ftc_round_history_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lo_searchType_cst" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_list_rcy"
            style="@style/Theme.Tegao.ScrollableViewFadeEdge"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/lo_title_history_txt"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="@dimen/padding_small"

            tools:itemCount="5"
            tools:listitem="@layout/item_searchhistory_word"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>