<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="RtlSymmetry">

    <data>
        <import type="com.tegaoteam.application.tegao.ui.shared.GlobalState.LookupMode"/>
        <variable
            name="viewModel"
            type="com.tegaoteam.application.tegao.ui.lookup.LookupActivityViewModel" />
    </data>

    <FrameLayout
        android:id="@+id/before_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/Theme.Tegao.Screen">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/Theme.Tegao.Screen.PaddingBorder"
            tools:context=".ui.lookup.LookupActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lo_searchBar_cst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_thick_stroke_background"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingEnd="@dimen/padding_normal">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/keywordInput_edt"
                    android:paddingVertical="@dimen/padding_large"
                    android:paddingStart="@dimen/padding_large"
                    android:inputType="text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="#00FFFFFF"
                    android:hint="@string/hint_example_keyword"
                    android:maxLines="1"
                    android:textColorHint="@color/neutral"
                    android:autofillHints="none"
                    app:layout_constraintEnd_toStartOf="@+id/lo_inputClearBtn_frm"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="spread"/>

                <FrameLayout
                    android:id="@+id/lo_inputClearBtn_frm"
                    android:layout_width="0dp"
                    android:maxWidth="@dimen/img_icon_big"
                    android:minWidth="@dimen/img_icon"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/keywordInput_edt"
                    app:layout_constraintEnd_toStartOf="@id/switch_handwritingMode_icl"
                    app:layout_constraintWidth_percent="0.1"

                    app:toggleVisibility="@{viewModel.enableClearSearchString}"
                    android:onClick="@{() -> viewModel.evClearSearchString.ignite()}"
                    android:foreground="?android:attr/selectableItemBackground"

                    tools:visibility="visible"
                    >
                    <ImageView
                        android:id="@+id/inputClear_btn"
                        style="@style/Theme.Tegao.IconImage"
                        android:padding="4dp"
                        android:src="@drawable/ftc_round_x_128"
                        android:layout_gravity="center"
                        />
                </FrameLayout>

                <include layout="@layout/view_button_pushswitch_icononly"
                    android:id="@+id/switch_handwritingMode_icl"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:maxWidth="@dimen/img_icon_big"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/lo_inputClearBtn_frm"
                    app:layout_constraintEnd_toStartOf="@id/lo_searchStartBtn_frm"
                    app:layout_constraintWidth_percent="0.1"

                    app:toggleVisibility="@{viewModel.isHandwritingEnabled}"
                    />

                <FrameLayout
                    android:id="@+id/lo_searchStartBtn_frm"
                    android:layout_width="0dp"
                    android:maxWidth="@dimen/img_icon_big"
                    android:minWidth="@dimen/img_icon"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/switch_handwritingMode_icl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintWidth_percent="0.1"

                    android:onClick="@{() -> viewModel.evStartSearch.ignite()}"
                    android:foreground="?android:attr/selectableItemBackground"
                    >
                    <ImageView
                        android:id="@+id/searchStart_btn"
                        style="@style/Theme.Tegao.IconImage"
                        android:padding="3dp"
                        android:src="@drawable/ftc_round_search_128"
                        android:layout_gravity="center"
                        />
                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lo_searchType_cst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_small"
                app:layout_constraintTop_toBottomOf="@id/lo_searchBar_cst">

                <FrameLayout
                    android:id="@+id/lo_stringHistory_fl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_tiny"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/lo_kanjiHistory_fl"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <Button
                        android:id="@+id/stringHistory_btn"
                        style="@style/Theme.Tegao.LabelButton.Neutral"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_words"
                        app:icon="@drawable/ftc_bold_char_a_128"
                        app:toggleVisibility="@{viewModel.lookupMode != LookupMode.WORD}"
                        android:onClick="@{() -> viewModel.evChangeToWordMode.ignite()}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:foreground="?android:attr/selectableItemBackground"
                        tools:visibility="gone"/>

                    <Button
                        android:id="@+id/lo_stringHistory_active_btn"
                        style="@style/Theme.Tegao.LabelButton.Primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_words"
                        app:icon="@drawable/ftc_bold_char_a_128"
                        app:toggleVisibility="@{viewModel.lookupMode == LookupMode.WORD}"
                        android:clickable="false"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/lo_kanjiHistory_fl"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_tiny"
                    app:layout_constraintStart_toEndOf="@id/lo_stringHistory_fl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <Button
                        android:id="@+id/kanjiHistory_btn"
                        style="@style/Theme.Tegao.LabelButton.Neutral"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_kanji"
                        app:icon="@drawable/ftc_bold_jp_char_go_128"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:toggleVisibility="@{viewModel.lookupMode != LookupMode.KANJI}"
                        android:onClick="@{() -> viewModel.evChangeToKanjiMode.ignite()}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/lo_kanjiHistory_active_btn"
                        style="@style/Theme.Tegao.LabelButton.Primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_kanji"
                        app:icon="@drawable/ftc_bold_jp_char_go_128"
                        app:toggleVisibility="@{viewModel.lookupMode == LookupMode.KANJI}"
                        android:clickable="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:visibility="gone"/>

                </FrameLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lo_dictionaryChip_rcy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lo_searchType_cst"
                android:layout_marginTop="@dimen/padding_small"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"

                tools:listitem="@layout/item_chip_dictionary_pick"
                tools:layoutManager="LinearLayoutManager"
                tools:orientation="horizontal"
                tools:itemCount="4"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/lo_searchResult_cst"
                style="@style/Theme.Tegao.RecyclerViewFadeEdge"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/padding_small"
                app:layout_constraintTop_toBottomOf="@id/lo_dictionaryChip_rcy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"

                tools:listitem="@layout/item_definition_word"
                tools:itemCount="2"
                />

<!--            <ScrollView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="0dp"-->
<!--                app:layout_constraintTop_toBottomOf="@id/lo_dictionaryChip_rcy"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:toggleVisibility="@{!viewModel.evIsRcyAdapterAvailable}"-->

<!--                tools:visibility="gone"-->
<!--                >-->

<!--                <TextView-->
<!--                    android:id="@+id/indevTestRetrofit"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginBottom="32dp"-->
<!--                    android:layout_marginTop="@dimen/padding_small"-->
<!--                    android:text="@{viewModel.indevRetrofitResult}"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    tools:text="alternative to recyclerview"/>-->

<!--            </ScrollView>-->

        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/lo_specialistInputBoard_holder_frm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            />

    </FrameLayout>

</layout>
